--- a/index.html
+++ b/index.html
@@ -5,15 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Document</title>
+    <title>SOWDAGOR-ELT</title>
     <!-- link  -->
-    <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;800&display=swap" rel="stylesheet"> 
 
     <!-- link  -->
 </head>
 <body>
-    
+    <nav>
+        <ul>
+           <ul>
+            <li>
+                <img width="250" src="logo.webp" alt=""> </li>
+           </ul>
+            <ul class="menu-bar">
+            <li><b>FEATURES</b> </li>
+            <li><b>PRICING</b></li>
+            <li><b>SERVICES</b></li>
+            <li><b>PARTNERS</b></li>
+            <BUtton class="btn-01">SIGN UP</BUtton>
+            </ul>
+        </ul>
+    </nav>
+    <!-- navber end -->
+
+<!-- section 01 start -->
+   <section class="banner-section">
+       <div class="banner-text">
+           <div>
+
+            <h1> <span style="color: #24AAE1;">WELCOME</span> TO  <br>
+            SOWDAGOR <span style="color: #24AAE1;">ELECTRONICS</span></h1>
+
+            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> 
+            Vel hic quae ullam! Dolorum, voluptatum?</P>
+
+            <button class="btn-02">GET ONE FREE</button>
+            <button class="btn-03">FIND A DEMO</button>
+
+           </div>
+
+       </div>
+       <div class="banner-img">
+        <img width="100%" src="banner-pic.jpg" alt="">
+       </div>
+   </section>
+<!-- section 01 end -->              
+<!-- section 02 start -->
+   <section class="banner-show">
+       <h2 class="">DISCOVER THE WORLD</h2> 
+       <img class="banner-show2 banner-show2-gap" src="banner-show2.jpg" alt="">
+       <img class="banner-show2-gap" src="banner-show-3.png" alt="">
+       <img class="banner-show2-gap" src="banner-show1.jpg" alt="">
+
+   </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- section 02 end -->              
+
+   
+
+
+
+
+
+
+
+
+
+
+<!-- scipt -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
+<!-- scipt -->
 </body>
 </html>
